--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "fastapi[standard]>=0.115.5",
+    "opencv-python>=4.10.0.84",
+    "streamlink>=7.0.0",
 ]
