--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 data/*.ts filter=lfs diff=lfs merge=lfs -text
+server/app/models/yolov3/yolov3.weights filter=lfs diff=lfs merge=lfs -text
