--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.9"
 dependencies = [
     "fastapi[standard]>=0.115.5",
     "opencv-python>=4.10.0.84",
+    "pillow>=11.0.0",
     "streamlink>=7.0.0",
 ]
