--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "fastapi[standard]>=0.115.5",
+    "matplotlib>=3.9.3",
     "opencv-python>=4.10.0.84",
     "pillow>=11.0.0",
     "streamlink>=7.0.0",
