--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -18,9 +18,10 @@ version = "0.1.0"
 description = ""
 authors = ["Shrey Pandya <shrey150@yahoo.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.13"
+python = "^3.11"
 fastapi = {extras = ["standard"], version = "^0.115.6"}
 pydantic-settings = "^2.7.1"
 sqlmodel = "^0.0.22"
